k8s_yaml/service_loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
spec:
  type: LoadBalancer
  ports:
  - port: 8888
    protocol: TCP
    targetPort: 1234
  selector:
    app: server
