k8s_yaml/service_nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
spec:
  type: NodePort
  ports:
  - port: 8888
    nodePort: 30000
    protocol: TCP
    targetPort: 1234
  selector:
    app: server
